--- a/src/index.html
+++ b/src/index.html
@@ -11,3 +11,9 @@
   <app-root></app-root>
 </body>
 </html>
+<!-- CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- JavaScript -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js" defer></script>
+
